--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "www.sarasprints.com",
-  "version": "0.0.0",
+  "version": "0.0.0-4",
   "description": "website for Sara's Prints",
   "main": "app.js",
   "dependencies": {
     "express": "~3.3.6",
     "consolidate": "~0.9.1",
-    "swig": "~1.0.0-pre3",
+    "swig": "~1.0.0-rc1",
     "nodemailer": "~0.5.2",
     "config": "~0.4.29"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Emerald Code Inc.",
-  "license": "BSD"
+  "license": "BSD",
+  "subdomain": "sarasprints",
+  "engines": {
+    "node": "0.10.x"
+  }
 }
