--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "consolidate": "~0.9.1",
     "swig": "~1.0.0-rc1",
     "nodemailer": "~0.5.2",
-    "config": "~0.4.29"
+    "config": "~0.4.29",
+    "async": "~0.2.9"
   },
   "devDependencies": {},
   "scripts": {
