--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "swig": "~1.0.0",
     "nodemailer": "~0.5.2",
     "config": "~0.4.29",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "kitgui": "0.0.0"
   },
   "devDependencies": {},
   "scripts": {
